// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/DateRangePicker/elements/Primary render 1`] = `
<React.Fragment>
  <div
    className="makeStyles-dropdown-3"
    id="date-range-picker"
  >
    <Typography
      className=""
      color="inherit"
      inline={false}
      variant="body1"
      weight="normal"
    >
      Start - End
    </Typography>
    <ArrowDown
      className="arrow"
    />
  </div>
  <WithStyles(ForwardRef(Popover))
    anchorEl={false}
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    id="popUp"
    onClose={[MockFunction]}
    open={false}
    transformOrigin={
      Object {
        "horizontal": "left",
        "vertical": "top",
      }
    }
  >
    <Unknown
      dateAdapter={[Function]}
      locale="en-US"
    >
      <ForwardRef
        allowKeyboardControl={false}
        displayStaticWrapperAs="desktop"
        inputFormat="DD/MM/YYYY"
        onChange={[Function]}
        renderInput={[Function]}
        showToolbar={false}
        value={
          Array [
            null,
            null,
          ]
        }
      />
      <div
        className="makeStyles-suggestionRoot-7"
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          justifyContent="center"
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-5"
              id="suggestion-0"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Last Week
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-5"
              id="suggestion-1"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Last Month
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-5"
              id="suggestion-2"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Last 3 Month
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-5"
              id="suggestion-3"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Last 6 Month
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-5"
              id="suggestion-4"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                YTD
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-5"
              id="suggestion-5"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                MTD
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-5"
              id="suggestion-6"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Last Year
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </div>
      <div
        className="makeStyles-actionButton-1"
      >
        <Button
          disabled={false}
          id="btn-reset"
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[MockFunction]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          variant="ghost"
        >
          Reset
        </Button>
        <Button
          disabled={false}
          id="btn-submit"
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[MockFunction]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          variant="filled"
        >
          Submit
        </Button>
      </div>
    </Unknown>
  </WithStyles(ForwardRef(Popover))>
</React.Fragment>
`;

exports[`src/components/DateRangePicker/elements/Primary render other props 1`] = `
<React.Fragment>
  <Typography
    className="makeStyles-required-20"
    color="primary-main"
    inline={false}
    variant="overline"
    weight="medium"
  >
    *
  </Typography>
  <Typography
    className="makeStyles-label-19"
    color="inherit"
    inline={false}
    variant="overline"
    weight="medium"
  >
    label
  </Typography>
  <div
    className="makeStyles-dropdown-13"
    id="date-range-picker"
  >
    <Date
      style={
        Object {
          "color": "#3B525C",
          "height": 16,
          "marginRight": 8,
          "width": 16,
        }
      }
    />
    <Typography
      className=""
      color="inherit"
      inline={false}
      variant="body1"
      weight="normal"
    >
      Start - End
    </Typography>
    <ArrowDown
      className="arrow"
    />
  </div>
  <WithStyles(ForwardRef(Popover))
    anchorEl={false}
    anchorOrigin={
      Object {
        "horizontal": "left",
        "vertical": "bottom",
      }
    }
    id="popUp"
    onClose={[MockFunction]}
    open={false}
    transformOrigin={
      Object {
        "horizontal": "left",
        "vertical": "top",
      }
    }
  >
    <Unknown
      dateAdapter={[Function]}
      locale="en-US"
    >
      <ForwardRef
        allowKeyboardControl={false}
        displayStaticWrapperAs="desktop"
        inputFormat="DD/MM/YYYY"
        onChange={[Function]}
        renderInput={[Function]}
        showToolbar={false}
        value={
          Array [
            null,
            null,
          ]
        }
      />
      <div
        className="makeStyles-suggestionRoot-17"
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          justifyContent="center"
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-15"
              id="suggestion-0"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Last Week
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-15"
              id="suggestion-1"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Last Month
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-15"
              id="suggestion-2"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Last 3 Month
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-15"
              id="suggestion-3"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Last 6 Month
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-15"
              id="suggestion-4"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                YTD
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-15"
              id="suggestion-5"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                MTD
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-15"
              id="suggestion-6"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Last Year
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </div>
      <div
        className="makeStyles-actionButton-11"
      >
        <Button
          disabled={false}
          id="btn-reset"
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[MockFunction]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          variant="ghost"
        >
          Reset
        </Button>
        <Button
          disabled={false}
          id="btn-submit"
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[MockFunction]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          variant="filled"
        >
          Submit
        </Button>
      </div>
    </Unknown>
  </WithStyles(ForwardRef(Popover))>
</React.Fragment>
`;

exports[`src/components/DateRangePicker/elements/Primary render/KeyboardInput 1`] = `
<React.Fragment>
  <WithStyles(ForwardRef(TextField))
    endProps={Object {}}
    size="small"
    startProps={Object {}}
    variant="standard"
  />
  <Styled(MuiBox)
    p={2}
  >
    <Typography
      className=""
      color="inherit"
      inline={false}
      variant="caption"
      weight="bold"
    >
      TO
    </Typography>
  </Styled(MuiBox)>
  <WithStyles(ForwardRef(TextField))
    size="small"
    variant="standard"
  />
</React.Fragment>
`;

exports[`src/components/DateRangePicker/elements/Primary render/Mobile 1`] = `
<React.Fragment>
  <div
    className="makeStyles-dropdown-23"
    id="date-range-picker"
  >
    <Typography
      className=""
      color="inherit"
      inline={false}
      variant="body1"
      weight="normal"
    >
      Start - End
    </Typography>
    <ArrowDown
      className="arrow"
    />
  </div>
  <WithStyles(ForwardRef(Dialog))
    classes={
      Object {
        "paper": "makeStyles-dialogPaper-22",
      }
    }
    id="popUp"
    onClose={[MockFunction]}
    open={false}
  >
    <Unknown
      dateAdapter={[Function]}
      locale="en-US"
    >
      <ForwardRef
        allowKeyboardControl={false}
        displayStaticWrapperAs="mobile"
        inputFormat="DD/MM/YYYY"
        onChange={[Function]}
        renderInput={[Function]}
        showToolbar={false}
        value={
          Array [
            null,
            null,
          ]
        }
      />
      <div
        className="makeStyles-suggestionRoot-27"
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          justifyContent="center"
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-25"
              id="suggestion-0"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Last Week
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-25"
              id="suggestion-1"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Last Month
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-25"
              id="suggestion-2"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Last 3 Month
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-25"
              id="suggestion-3"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Last 6 Month
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-25"
              id="suggestion-4"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                YTD
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-25"
              id="suggestion-5"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                MTD
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs="auto"
          >
            <div
              className="makeStyles-suggestion-25"
              id="suggestion-6"
            >
              <Typography
                className=""
                color="inherit"
                inline={false}
                variant="caption"
                weight="bold"
              >
                Last Year
              </Typography>
            </div>
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
      </div>
      <div
        className="makeStyles-actionButton-21"
      >
        <Button
          disabled={false}
          id="btn-reset"
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[MockFunction]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          variant="ghost"
        >
          Reset
        </Button>
        <Button
          disabled={false}
          id="btn-submit"
          leftIcon={null}
          loading={false}
          ml={0}
          mr={0}
          onClick={[MockFunction]}
          rightIcon={null}
          rounded="normal"
          textTransform="uppercase"
          variant="filled"
        >
          Submit
        </Button>
      </div>
    </Unknown>
  </WithStyles(ForwardRef(Dialog))>
</React.Fragment>
`;
